Wed Aug  4 01:37:57 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c: 
	* gtk/gtktreestore.c: 
	* gtk/gtktreemodelfilter.c: 
	* gtk/gtknotebook.c: s/childs/children/g.

Wed Aug  4 01:04:48 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #133446, noticed by Christian Persch:
	
	* gtk/gtkaction.c (gtk_action_class_init): Add a new boolean 
	property ::visible-overflown. 
	* gtk/gtkaction.c (gtk_action_create_menu_proxy): Don't create 
	a menu proxy if visible_overflown is FALSE.  

Tue Aug  3 20:16:26 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkactiongroup.[hc]: Make the the GtkAction{Toggle,Radio,}Entry*
	arguments to the gtk_action_group_add_..._actions() functions const, 
	since the most common use case is to use a static array.  (142334, 
	Mariano Suarez-Alvarez)

Tue Aug  3 20:03:33 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkuimanager.c (get_node): Make gtk_ui_manager_add_ui()
	accept paths with a leading "/ui".  (#149077, David Malcolm)

Tue Aug  3 19:59:29 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkiconview.c: Fix some warnings.

Tue Aug  3 18:38:40 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreemodelfilter.c: Correct the return type
	of gtk_tree_model_filter_get_flags().  (#149195, Morten Welinder)

Tue Aug  3 18:16:55 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #149191, reported by Morten Welinder:
	
	* gtk/gtkmain.c: Include gtkclipboard.h,
	* gtk/gtkwidget.h: Declare _gtk_widget_grab_notify, not
	_gtk_widget_emit_grab_notify.  

Tue Aug  3 14:50:14 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkicontheme.c (add_size): Add missing parens.
	(#149190, Morten Welinder)

Tue Aug  3 14:29:49 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_menu_fill): Remove 
	accidentally committed debug code.

Tue Aug  3 01:19:12 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_relayout_item): Optimize 
	for the case that row_column and col_column are unset.  